# django-docker-postgres-celery

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: diagnosis-ci.yml
scripts/: run-black.sh  run-celery.sh  run-docker.sh  run-flake8.sh  run-flower.sh  run-isort.sh  run-linters.sh  run-server.sh  run-tests.sh
src/: manage.py
src/diagnosis/: __init__.py  celery.py  urls.py
src/diagnosis/settings/: base.py  development.py  production.py  testing.py
src/icd/: admin.py  apps.py  extensions.py  models.py  serializers.py  signals.py  urls.py  views.py
src/icd/fixtures/: category.json  diagnosis.json
src/icd/management/commands/: create_user.py
src/icd/migrations/: 0001_initial.py  0002_alter_diagnosis_category_alter_file_user.py  0002_rename_files_file_alter_diagnosis_options.py  0003_alter_diagnosis_options.py  0003_rename_file_csvfile.py  0004_alter_category_options.py  0004_alter_diagnosis_abbreviated_desc_and_more.py  0005_rename_type_csvfile_data_type.py  0006_rename_data_type_csvfile_file_type.py
src/services/emails/: messaging.py
src/services/utils/: process_csv.py
tests/test_icd/: test_file.csv  test_models.py  test_setup.py  test_views.py
tests/test_services/test_emails/: test_messaging.py
tests/test_services/test_utils/: test_process_csv.py
